# Vsss_competition

./: README.md
learn_ros2_ws/install/: local_setup.sh  setup.sh
learn_ros2_ws/install/simulation_pkg/share/simulation_pkg/: package.dsv  package.ps1  package.sh
learn_ros2_ws/log/: latest_build
learn_ros2_ws/src/simulation_pkg/: package.xml  setup.py
learn_ros2_ws/src/simulation_pkg/rviz/: config.rviz
ros2_ws/: Dockerfile
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/mi_robot_urdf/lib/mi_robot_urdf/: display_rviz
ros2_ws/install/mi_robot_urdf/share/mi_robot_urdf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/mi_robot_urdf/share/mi_robot_urdf/launch/: display.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/mi_robot_urdf/: setup.cfg  setup.py
ros2_ws/src/mi_robot_urdf/launch/: display1.launch.py  gazebo.launch.py
ros2_ws/src/mi_robot_urdf/rviz/: config.rviz
ros2_ws/src/mi_robot_urdf/urdf/: caja_con_ruedas.urdf.xacro
ros3_ws/install/: local_setup.sh  setup.sh
ros3_ws/install/robot_mqtt/lib/robot_mqtt/: movement_node  robot_mqtt
ros3_ws/log/: latest_build
ros3_ws/src/robot_mqtt/: package.xml  setup.cfg  setup.py
tracking_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tracking_ws/log/: latest_build
tracking_ws/src/deteccion_pkg/: setup.cfg  setup.py
tracking_ws/src/deteccion_pkg/deteccion_pkg/: camera_node.py  trajectory_graph_node.py  viewer_node.py
urdf_tutorial_ws/src/tutorial_pkg/: package.xml  setup.cfg  setup.py
(+17 files in other folders)
