<?xml version="1.0"?>
<package format="3">
  <name>mi_robot_urdf</name>
  <version>0.0.1</version>
  <description>Paquete ROS 2 para visualizar un modelo URDF en Rviz</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>ros2launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
